--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ decorator==5.1.1
 dicttoxml==1.7.4
 dill==0.3.5.1
 Django==2.2
+django-dotenv==1.4.2
 docutils==0.19
 firebase-admin==5.2.0
 frozenlist==1.3.0
@@ -43,6 +44,7 @@ h11==0.13.0
 httplib2==0.20.4
 idna==3.3
 importlib-metadata==4.12.0
+install==1.3.5
 ipinfo==4.2.0
 ipinfo-django==1.2.0
 isort==5.10.1
@@ -78,7 +80,6 @@ pyquery==1.4.3
 PyRect==0.2.0
 PyScreeze==0.1.28
 PySocks==1.7.1
-python-dotenv==0.20.0
 pytweening==1.0.4
 pytz==2022.1
 pywin32-ctypes==0.2.0
